Add more info to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,16 @@ name = "github-types"
 version = "0.1.0"
 authors = ["Jason White <rust@jasonwhite.io>"]
 edition = "2018"
+description = """
+Type definitions for the GitHub API.
+"""
+documentation = "https://docs.rs/github-types"
+homepage = "https://github.com/jasonwhite/github-types"
+repository = "https://github.com/jasonwhite/github-types"
+readme = "README.md"
+keywords = ["github", "api"]
+categories = ["api-bindings"]
+license = "MIT"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
