--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ license = "MIT"
 chrono = { version = "0.4", features = ["serde"] }
 hex = "0.3"
 serde = { version = "1", features = ["derive"] }
+derive_more = "0.14"
