--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ chrono = { version = "0.4", features = ["serde"] }
 hex = "0.3"
 serde = { version = "1", features = ["derive"] }
 derive_more = "0.14"
+serde_json = "1.0.40"
